@@ -25,7 +25,7 @@
 
 
 // Fix missing snprintf in Windows
-#if defined _MSC_VER &&_MSC_VER<1900
+#if defined _MSC_VER && _MSC_VER<1900
 #define snprintf _snprintf
 #endif
 
