@@ -1,3 +1,7 @@
+01/04/2019:
+	- Minor code changes for Windows MSVC compilation
+
+
 19/03/2019:
 	- Small increase in temporary buffer size in OBJ.cc colorspace() function
 	  to avoid truncation warning in GCC 8.2
